--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         
         .footer-content {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, mikageskagesdsedsinmax(250px, 1fr));
             gap: 40px;
             margin-bottom: 40px;
         }
@@ -678,7 +678,7 @@
                         <img src="https://i.ibb.co/F47RW4yh/Polish-20250930-095718710.jpg" alt="Kafunda Net">
                     </div>
                     <h2>Unlimited Internet Packages</h2>
-                    <p>Choose from our range of affordable unlimited internet packages designed to meet your connectivity needs.</p>
+                    <p>Choose from our range of affordable unlimited internet packages designed to meet your connectivity. For all our packages; installation is FREE, but all clients are required to pay a one-time activation fee of Ugx 130,000 which comes with 1 month free activation (10mbps).</p>
                 </div>
                 <div class="packages-container">
                     <div class="package-card">
