--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                         <p><i class="fas fa-map-marker-alt"></i> Munyonyo, Kampala, Uganda</p>
                         <p><i class="fas fa-phone"></i> 0704677599</p>
                         <p><i class="fab fa-whatsapp"></i> 0771743454</p>
-                        <p><i class="fas fa-envelope"></i> info@sprinttelecom.ug</p>
+                        <p><i class="fas fa-envelope"></i> sprintttelecom23@gmail.com</p>
                     </div>
                 </div>
                 
@@ -800,7 +800,6 @@
                     <img src="https://i.ibb.co/r2DXYdPC/Polish-20250930-095620789.jpg" alt="Partner Logo 1">
                     <img src="https://i.ibb.co/pjJC7QCj/Polish-20250930-095532754.jpg" alt="Partner Logo 2">
                     <img src="https://i.ibb.co/dsnm7ZsT/Polish-20250930-095814873.jpg" alt="Partner Logo 3">
-                    <img src="https://i.ibb.co/F47RW4yh/Polish-20250930-095718710.jpg" alt="Kafunda Net Logo">
                 </div>
                 
                 <div class="copyright">
