--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                     <a href="#" class="btn btn-secondary payment-install">
                         <i class="fas fa-money-bill-wave"></i> Payment via Mobile Money
                     </a>
-                    <a href="https://wispuser.com/sprinttelecom" class="btn btn-secondary">
+                    <a href="https://wispuser.com/sprint-telecom" class="btn btn-secondary">
                         <i class="fas fa-link"></i> Payment Link
                     </a>
                 </div>
