--- a/index.html
+++ b/index.html
@@ -754,10 +754,10 @@
                         <i class="fab fa-whatsapp"></i> WhatsApp
                     </a>
                     <a href="#" class="btn btn-secondary payment-install">
-                        <i class="fas fa-money-bill-wave"></i> Payment via Mobile Money
+                        <i class="fas fa-money-bill-wave"></i> Payment (New Installation)
                     </a>
                     <a href="https://wispuser.com/sprint-telecom" class="btn btn-secondary">
-                        <i class="fas fa-link"></i> Payment Link
+                        <i class="fas fa-link"></i> Payment (Monthly Renewal)
                     </a>
                 </div>
             </div>
